<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">
    <TextView
        android:layout_width="0dp"
        android:id="@+id/lets_post"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/f"
        android:text="@string/lets_connect"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="0dp"
        android:id="@+id/posttitle"
        android:layout_height="wrap_content"
        android:text="@string/create_your_post"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lets_post" />

    <EditText
        android:id="@+id/postInput"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_round_shape"
        android:gravity="top"
        android:hint="@string/what_do_you_want_to_talk_about"
        android:inputType="textLongMessage"
        android:padding="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posttitle"
        android:autofillHints="" />

    <Button
        android:layout_width="0dp"
        android:id="@+id/postButton"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postInput"
        android:layout_margin="12dp"
        android:text="@string/post"
        android:background="@drawable/edittext_round_shape"/>

</androidx.constraintlayout.widget.ConstraintLayout>