<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page2">

    <TextView
        android:layout_width="0dp"
        android:id="@+id/lets"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/f"
        android:text="@string/lets_connect"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/logout1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logout1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:onClick="logOutpage2"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:id="@+id/memestitle"
        android:layout_height="wrap_content"
       android:text="@string/meme"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lets" />

    <ImageView
        android:id="@+id/memepic"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/meme"

        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/gh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memestitle" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5864"
        android:elevation="5dp"
        android:id="@+id/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/theme"
            android:contentDescription="@string/meme"
            android:onClick="loadMeme"
            android:id="@+id/memepage"
            android:src="@drawable/meme" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/theme"
            android:contentDescription="@string/post"

            android:id="@+id/postpage"
            android:src="@drawable/post" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
      app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <Button
        android:id="@+id/nextmeme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/line1"
        android:layout_marginEnd="16dp"
     android:onClick="showNextMeme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/gv"/>

    <Button
        android:id="@+id/sharememe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:onClick="shareMeme"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toRightOf="@id/gv"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/line1"
        />

    <ProgressBar
        android:id="@+id/progressbarmeme"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/gh"
        app:layout_constraintLeft_toLeftOf="@id/gv"
        app:layout_constraintRight_toRightOf="@id/gv"
       />


</androidx.constraintlayout.widget.ConstraintLayout>